--- a/app/element/layout/application-layout.html
+++ b/app/element/layout/application-layout.html
@@ -157,7 +157,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                        type: String,
                        reflectToAttribute: true,
                        observer: '_pageChanged',
-                       value: 'timeline-index'
+                       value: 'media-device-index'
                    },
 
                    nameApplication: {
