--- a/app/module/media-device/element/view/upsert.html
+++ b/app/module/media-device/element/view/upsert.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../../../../bower_components/paper-checkbox/paper-checkbox.html">
 
 <link rel="import" href="../../../../element/file-upload/file-upload.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-resource-behaviour.html">
 
 <link rel="import" href="../../../../css/global-layout.html">
 <link rel="import" href="../../../../css/global-styles.html">
@@ -56,6 +57,7 @@
         <div class="flex flex-horizontal">
             <iron-form id="formResource">
                 <form method="post">
+                    <paper-input id="name" name="name" label="Name" value="{{resource.name}}" required></paper-input>
                     <paper-autocomplete
                             id="mediaDevice"
                             label="Media device"
@@ -104,7 +106,7 @@
     </template>
 
     <script>
-        class ElementMediaDeviceViewUpsert extends Polymer.Element {
+        class ElementMediaDeviceViewUpsert extends StorageAdapterResourceBehaviour {
 
             static get is() {
                 return 'media-device-view-upsert';
@@ -123,6 +125,13 @@
                         observer: '_resourceChanged'
                     },
 
+                    storageName: {
+                        type: String,
+                        readOnly: true,
+                        value: MediaDeviceConfig.NAME_SERVICE
+
+                    },
+
                     labelAction: {
                         type: String,
                         value: 'Save'
@@ -132,12 +141,6 @@
 
             ready() {
                 super.ready();
-/*
-                serviceManager.get('StoragePluginManager')
-                    .get(SoccerConfig.NAME_SERVICE)
-                    .eventManager.on(Storage.STORAGE_POST_SAVE, this._clearResource.bind(this)
-                );
-*/
                 this.$.formResource.addEventListener('iron-form-presubmit', this.submitResource.bind(this));
             }
 
@@ -160,6 +163,7 @@
              */
             _selectMediaDevice(evt) {
 
+                evt.detail.option.name = this.$.name.value;
                 this.resource = serviceManager.get('HydratorPluginManager')
                     .get('mediaDeviceFromApiApiHydrator')
                     .hydrate(evt.detail.option);
@@ -202,16 +206,18 @@
 
                 let method = this.resource.id ? 'update' : 'save';
 
-                serviceManager.get('StoragePluginManager')
-                    .get(MediaDeviceConfig.NAME_SERVICE)[method](this.resource)
+                this.storage[method](this.resource)
                     .then((data) => {
                         serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' media device');
+                        if (method === 'save') {
+                            this.resource = new MediaDevice();
+                            this.$.mediaDevice.reset();
+                        }
                     })
                     .catch((err) => {
                             console.log(err)
                         }
                     );
-
             }
         }
 
