--- a/app/module/_timeline/element/view/upsert.html
+++ b/app/module/_timeline/element/view/upsert.html
@@ -224,7 +224,7 @@
                     resource: {
                         type: Object,
                         notify: true,
-                        value: new Timeline(),
+                        value: new TimelineEntity(),
                         observer: '_timelineChanged'
                     }
                 }
@@ -455,7 +455,7 @@
              * @private
              */
             _reset() {
-                this.resource = new Timeline();
+                this.resource = new TimelineEntity();
             }
         }
 
